--- a/style.css
+++ b/style.css
@@ -114,17 +114,15 @@ section{
     align-items: flex-end;
     text-align: right;
     h1{
-        font-size: 8rem;
+        font-size: 50px;
         font-weight: 700;
         margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
         line-height: 1;
     }
-    h3{
-        margin: 1rem 0;
-        font-size: 4rem;
-    }
     p{
-        font-size: 1.5rem;
+        
+        font-size: 15px;
         font-weight: 500;
         line-height: 1.8;
     }
@@ -136,10 +134,12 @@ section{
         width: 32vw;
         border-radius: 50%;
         box-shadow: 0 0 25px var(--main-color);
-        transition: 0.4s ease-in-out;   
+        transition: 0.4s ease-in-out;
+        margin-bottom: 20px;   
     }
 }
 .home-img img:hover{
+    transform: scale(1.1);
     box-shadow: 0 0 25px var(--main-color),
                 0 0 50px var(--main-color),
                 0 0 100px var(--main-color);
@@ -184,12 +184,26 @@ section{
     transition: 0.3s ease-in-out;
 }
 .btn:hover{
-    transform: scale(1.5);
+    transform: scale(1.2);
     box-shadow: 0 0 25px var(--main-color),
                 0 0 50px var(--main-color);
-}
+} 
 .btn-group a:nth-of-type(2){
-    background-color: #080808;
-    color: #5a189a;
-    
+    margin-left: 35px;
+    display: inline-block;
+    padding: 1rem 3rem;
+    background-color: var(--bg-color);
+    box-shadow: 0 0 25px var(--main-color);
+    border-radius: 3rem;
+    border-color: 3px solid #5a189a;
+    font-size: 1.8rem;
+    color: var(--main-color);
+    border: 2px solid #5a189a;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+}
+.btn-group a:nth-of-type(2):hover{
+    transform: scale(1.2);
+    box-shadow: 0 0 25px var(--bg-color),
+                0 0 50px var(--bg-color);
 }
