--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     scroll-behavior: smooth;
     font-family: "Inter", sans-serif;
 }
+::-webkit-scrollbar-track{
+    background-color: var(--bg-color);
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--main-color);
+}
 /* Colors */
 :root{
     --bg-color: #080808;
@@ -121,7 +127,6 @@ section{
         line-height: 1;
     }
     p{
-        
         font-size: 15px;
         font-weight: 500;
         line-height: 1.8;
@@ -206,4 +211,39 @@ section{
     transform: scale(1.2);
     box-shadow: 0 0 25px var(--bg-color),
                 0 0 50px var(--bg-color);
+}
+/* About Section Styles */
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10rem;
+    background-color: var(--second-bg-color);
+}
+.about-img img{
+    width: 350px;
+    height: 500px;
+    border-radius: 30px;
+    box-shadow: 0 0 25px var(--main-color);
+    transition: 0.3s ease-in-out;
+}
+.about-img img:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color),
+                0 0 100px var(--main-color);
+}
+.about-content{
+    h2{
+        font-size: 6rem;
+        text-align: left;
+    }
+    p{
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 1.8;
+    }
+}
+.about-content .btn{
+    margin: 3rem 0;
 }
