--- a/style.css
+++ b/style.css
@@ -415,3 +415,25 @@ footer .copyright{
     margin-top: 40px;
     font-size: 16px;
 }
+
+@media(max-width: 1285px){
+    #menu-icon{
+        display: block;
+    }
+    .nav{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 50%;
+        padding: 1rem 3rem;
+        background: rgba(0, 0, 0, 0.3);
+        border-bottom-left-radius: 2rem;
+        border-left: 2px solid var(--main-color);
+        border-bottom: 2px solid var(--main-color);
+        a{
+            display: block;
+            font-size: 2rem;
+            margin: 3rem 0;
+        }
+    }
+}
