--- a/style.css
+++ b/style.css
@@ -179,7 +179,6 @@ section{
     display: inline-block;
     padding: 1rem 3rem;
     background-color: var(--main-color);
-    box-shadow: 0 0 25px var(--main-color);
     border-radius: 3rem;
     font-size: 1.8rem;
     color: var(--text-color);
@@ -197,7 +196,6 @@ section{
     display: inline-block;
     padding: 1rem 3rem;
     background-color: var(--bg-color);
-    box-shadow: 0 0 25px var(--main-color);
     border-radius: 3rem;
     border-color: 3px solid #8338ec;
     font-size: 1.8rem;
@@ -208,8 +206,8 @@ section{
 }
 .btn-group a:nth-of-type(2):hover{
     transform: scale(1.2);
-    box-shadow: 0 0 25px var(--bg-color),
-                0 0 50px var(--bg-color);
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color);
 }
 /* About Section Styles */
 .about{
