--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ section{
         
     }
     p{
+        text-align: start;
         font-size: 1.4rem;
         font-weight: 600;
         line-height: 1.7;
@@ -347,6 +348,7 @@ section{
     }
     p{
         font-size: 1.6rem;
+        text-align: start;
     }
 }
 .project-card:hover{
