--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Site settings */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,92 +7,109 @@
     scroll-behavior: smooth;
     font-family: "Inter", sans-serif;
 }
-::-webkit-scrollbar-track{
+
+::-webkit-scrollbar-track {
     background-color: var(--bg-color);
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background-color: var(--main-color);
 }
+
 /* Colors */
-:root{
+:root {
     --bg-color: #080808;
     --second-bg-color: #101010;
     --text-color: white;
     --main-color: #8338ec;
 }
+
 /* HTML settings */
-html{
+html {
     font-size: 60%;
     overflow-x: hidden;
 }
+
 /* Default color */
-body{
+body {
     background: var(--bg-color);
     color: var(--text-color);
 }
+
 /* Header Styles */
-header{
+header {
+    padding: 25px;
     position: fixed;
     width: 100%;
     top: 0%;
     left: 0%;
-    padding:  4rem, 15%;
-    background-color: rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(10px);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     z-index: 1000;
 }
-#menu-icon{
+
+#menu-icon {
     font-size: 3.5rem;
     color: var(--main-color);
     display: none;
 }
-.logo{
+
+.logo {
     font-size: 3rem;
     color: var(--text-color);
     font-weight: 800;
     cursor: pointer;
     transition: 0.3s ease-in-out;
     margin: 10px;
-    img{
+
+    img {
         width: 50px;
         height: 50px;
     }
 }
-.logo:hover{
+
+.logo:hover {
     transform: scale(1.1);
 }
-span{
-    background: linear-gradient(
-        270deg,
-        #8338ec 50%,
-        white 100%
-    );
+
+span {
+    background: linear-gradient(270deg,
+            #8338ec 50%,
+            white 100%);
     background-clip: text;
     color: transparent;
 }
-nav{
-    a{
+
+nav {
+    border: #b996e961 solid;
+    border-radius: 500px;
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+    padding: 15px 100px 13px;
+    display: flex;
+    gap: 25px;
+
+    a {
         font-size: 1.8rem;
-        color: var(--text-color);
-        margin-left: 4rem;
-        font-weight: 500;
+        color: #ffffffdb;
+        font-weight: 300;
         transition: 0.3s ease-in-out;
         border-bottom: 3px transparent solid;
     }
 }
-nav a:hover{
+
+nav a:hover {
     color: var(--main-color);
     border-bottom: 3px solid var(--main-color);
 }
-.gradient-btn{
+
+.gradient-btn {
     font-size: 1.8rem;
     padding: 1rem 2rem;
     border-radius: 4rem;
     margin: 10px;
-   background-color: #8338ec;
+    background-color: #8338ec;
     color: var(--text-color);
     letter-spacing: 1px;
     cursor: pointer;
@@ -100,82 +117,104 @@ nav a:hover{
     border: none;
     text-wrap: nowrap;
 }
-.gradient-btn:hover{
+
+.gradient-btn:hover {
     transform: scale(1.05);
 }
+
 /* Home Section */
-section{
+section {
     min-height: 100vh;
     padding: 10rem 15%;
 }
-.home{
+
+.home {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15rem;
 }
-.home-content{
+
+.home-content {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    text-align: right;
-    h1{
+    text-align: start;
+
+    h1 {
+        color: #fffffff0;
         font-size: 50px;
         font-weight: 700;
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
         line-height: 1;
     }
-    p{
+
+    p {
+        color: #ffffffdb;
         font-size: 15px;
         font-weight: 500;
         line-height: 1.8;
     }
+
+    a {
+        font-weight: 700;
+        background-color: var(--main-color);
+        color: #ffffffdb;
+        padding: 10px 35px;
+        border-radius: 500px;
+    }
 }
+
 /* Portrait Styles */
-.home-img{
-    img{
+.home-img {
+    img {
         height: 400px;
         width: 32vw;
         border-radius: 50%;
         box-shadow: 0 0 25px var(--main-color);
         transition: 0.4s ease-in-out;
-        margin-bottom: 20px;   
+        margin-bottom: 20px;
     }
 }
-.home-img img:hover{
+
+.home-img img:hover {
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color),
-                0 0 100px var(--main-color);
+        0 0 50px var(--main-color),
+        0 0 100px var(--main-color);
 }
+
 /* Icons */
-.social-icons{
-   a{
-     display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
-    padding: 1rem;
-    background: transparent;
-    border: 2px solid var(--main-color);
-    border-radius: 50%;
-    color: var(--main-color);
-    margin: 3rem 0.5rem;
-    transition: 0.3s ease-in-out;
-   }
+.social-icons {
+    a {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 3rem;
+        padding: 1rem;
+        background: transparent;
+        border: 2px solid var(--main-color);
+        border-radius: 50%;
+        color: var(--main-color);
+        margin: 3rem 0.5rem;
+        transition: 0.3s ease-in-out;
+    }
 }
-.social-icons a:hover{
+
+.social-icons a:hover {
     color: var(--text-color);
     background-color: var(--main-color);
     transform: scale(1.2)translateY(-5px);
     box-shadow: 0 0 25px var(--main-color);
 }
+
 /* Button Style */
-.btn-group{
+.btn-group {
     display: flex;
     gap: 1.5rem;
 }
-.btn{
+
+.btn {
     display: inline-block;
     padding: 1rem 3rem;
     background-color: var(--main-color);
@@ -186,12 +225,14 @@ section{
     font-weight: 600;
     transition: 0.3s ease-in-out;
 }
-.btn:hover{
+
+.btn:hover {
     transform: scale(1.2);
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color);
-} 
-.btn-group a:nth-of-type(2){
+        0 0 50px var(--main-color);
+}
+
+.btn-group a:nth-of-type(2) {
     margin-left: 35px;
     display: inline-block;
     padding: 1rem 3rem;
@@ -204,69 +245,82 @@ section{
     font-weight: 600;
     transition: 0.3s ease-in-out;
 }
-.btn-group a:nth-of-type(2):hover{
+
+.btn-group a:nth-of-type(2):hover {
     transform: scale(1.2);
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color);
+        0 0 50px var(--main-color);
 }
+
 /* About Section Styles */
-.about{
+.about {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10rem;
     background-color: var(--second-bg-color);
 }
-.about-img img{
+
+.about-img img {
     width: 350px;
     height: 500px;
     border-radius: 30px;
     box-shadow: 0 0 25px var(--main-color);
     transition: 0.3s ease-in-out;
 }
-.about-img img:hover{
+
+.about-img img:hover {
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color),
-                0 0 100px var(--main-color);
+        0 0 50px var(--main-color),
+        0 0 100px var(--main-color);
 }
-.about-content{
-    h2{
+
+.about-content {
+    h2 {
         font-size: 6rem;
         text-align: left;
         padding-bottom: 10px;
     }
-    p{
+
+    p {
         font-size: 15px;
         font-weight: 500;
         line-height: 1.8;
     }
 }
-.about-content .btn{
+
+.about-content .btn {
     margin: 3rem 0;
 }
+
 /* Services styles */
-.heading{
-     text-align: center;
-        font-size: 6rem;
-        margin: 5rem 0;
+.heading {
+    text-align: center;
+    font-size: 6rem;
+    margin: 5rem 0;
 }
-.services{
-    h2{
+
+.services {
+    h2 {
         color: white;
     }
+
     background-color: #080808;
     color: #080808;
 }
-.stubborn{
+
+.stubborn {
     display: flex;
 }
-.services-container{
+
+.services-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     align-items: center;
     gap: 2.5rem;
 }
-.service-box{
+
+.service-box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -278,57 +332,67 @@ section{
     transition: 0.4s ease-in-out;
     margin: 15px;
 }
-.service-box:hover{
+
+.service-box:hover {
     background: var(--second-bg-color);
     color: var(--main-color);
     border: 5px solid var(--main-color);
-    transform:scale(1.03);
-} 
-.service-info{
+    transform: scale(1.03);
+}
+
+.service-info {
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
     align-items: center;
     padding: 50px;
-    h3{
+
+    h3 {
         font-size: 4rem;
         font-weight: 800;
         margin: 2rem 0;
-        
+
     }
-    p{
+
+    p {
         text-align: start;
         font-size: 1.4rem;
         font-weight: 600;
         line-height: 1.7;
     }
-    i{
+
+    i {
         font-size: 8rem;
     }
 }
+
 /* Cards aka Projects Styles */
-.projects{
+.projects {
     background-color: var(--second-bg-color);
-    h2{
+
+    h2 {
         text-align: center;
         padding-bottom: 50px;
         font-size: 65px;
     }
 }
-.project-box{
+
+.project-box {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     place-items: center;
     gap: 3rem;
     row-gap: 5rem;
-    img{
+
+    img {
         width: 300px;
         height: 160px;
         border-radius: 2rem;
     }
 }
-.project-card{
+
+.project-card {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -336,36 +400,42 @@ section{
     text-align: center;
     background-color: var(--bg-color);
     border: 2px solid var(--main-color);
-    border-radius:  3rem;
+    border-radius: 3rem;
     gap: 2rem;
     padding: 5rem 2rem;
     overflow: hidden;
     cursor: pointer;
     box-shadow: 0 0 5px var(--main-color);
     transition: 0.3s ease;
-    h3{
+
+    h3 {
         font-size: 3rem;
     }
-    p{
+
+    p {
         font-size: 1.6rem;
         text-align: start;
     }
 }
-.project-card:hover{
+
+.project-card:hover {
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color);
+        0 0 50px var(--main-color);
     transform: scale(1.02);
 }
+
 /* Contact */
-.Contact{
+.Contact {
     background-color: var(--bg-color);
-    h2{
+
+    h2 {
         font-size: 65px;
         margin-bottom: 3rem;
         color: var(--text-color);
         text-align: center;
     }
-    form{
+
+    form {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -373,8 +443,9 @@ section{
         text-align: center;
     }
 }
+
 .Contact form .input-box input,
-.Contact form textarea{
+.Contact form textarea {
     width: 100%;
     padding: 2.5rem;
     font-size: 1.8rem;
@@ -385,42 +456,50 @@ section{
     margin: 1.5rem 0;
     resize: none;
 }
+
 /* Footer Styles */
-footer{
+footer {
     background-color: var(--second-bg-color);
     padding: 50px 0;
-    ul{
+
+    ul {
         text-align: center;
         font-size: 1.8rem;
-       
+
     }
-    li{
+
+    li {
         display: inline-block;
         margin-left: 20px;
     }
-    a{
+
+    a {
         color: white;
         border-bottom: 3px solid transparent;
         transform: 0.3s ease-in-out;
     }
 }
-footer ul li a:hover{
+
+footer ul li a:hover {
     border-bottom: 3px solid var(--main-color);
 }
-footer .social-icons{
+
+footer .social-icons {
     text-align: center;
 }
-footer .copyright{
+
+footer .copyright {
     text-align: center;
     margin-top: 40px;
     font-size: 16px;
 }
 
-@media(max-width: 1285px){
-    #menu-icon{
+@media(max-width: 1285px) {
+    #menu-icon {
         display: block;
     }
-    .nav{
+
+    .nav {
         position: absolute;
         top: 100%;
         right: 0;
@@ -431,13 +510,15 @@ footer .copyright{
         border-left: 2px solid var(--main-color);
         border-bottom: 2px solid var(--main-color);
         display: none;
-        a{
+
+        a {
             display: block;
             font-size: 2rem;
             margin: 3rem 0;
         }
     }
-     /* .navbar.active{
+
+    /* .navbar.active{
         display: block;
     }
     .gradient-btn{
