--- a/style.css
+++ b/style.css
@@ -167,19 +167,22 @@ section {
         margin: 0;
         margin-top: 80px;
     }
+
     img {
         Z-INDEX: 0;
         width: 32%;
         aspect-ratio: 1;
         border-radius: 50%;
-        box-shadow: -159px -11PX 202px #8338ec4a;
+        box-shadow: -143px 10PX 200px #8338ec4a;
     }
+
     .home-content {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         width: 40%;
         z-index: 1;
+
         h1 {
             background: linear-gradient(182deg, #ffffff, white 24%, #ffffff9c 80%);
             background-clip: text;
@@ -304,19 +307,22 @@ section {
     font-size: 6rem;
     margin: 5rem 0;
 }
+
 .services {
     position: relative;
-    overflow: hidden;
+
     .group {
         display: flex;
         flex-direction: row;
         color: var(--text-color);
         gap: 65px;
+
         img {
-            width: 100%;
+            width: 90%;
             border-radius: 20px
         }
     }
+
     .titlePara {
         position: sticky;
         top: 0;
@@ -324,7 +330,12 @@ section {
         display: flex;
         flex-direction: column;
         gap: 10px;
+        width: 480px;
+        p{
+            font-size: 14px;
+        }
     }
+
     .skills {
         display: flex;
         flex-direction: column;
@@ -344,6 +355,7 @@ section {
             gap: 10px;
         }
     }
+
     .group-2 {
         display: flex;
         flex-direction: row-reverse;
@@ -351,10 +363,34 @@ section {
         gap: 65px;
 
         img {
-            width: 100%;
+            width: 80%;
             border-radius: 20px
         }
     }
+}
+
+.bg-blur.purple2 {
+    background-color: #8338ec61;
+    top: 20%;
+    left: 0%;
+}
+
+.bg-blur.pink2 {
+    background-color: #9d0f9d85;
+    left: 20%;
+    bottom: 57%;
+}
+
+.bg-blur.purple3 {
+    background-color: #8338ec61;
+    left: 65%;
+    bottom: 25%;
+}
+
+.bg-blur.pink3 {
+    background-color: #9d0f9d85;
+    left: 50%;
+    bottom: 15%;
 }
 
 .stubborn {
@@ -501,23 +537,26 @@ summary {
     filter: blur(100px);
     z-index: -1;
     width: 400px;
-    opacity: .7;
+    opacity: 35%;
 }
-.bg-blur.light-top{
-   background-color: #7b37ba;
+
+.bg-blur.light-top {
+    background-color: #7b37ba;
     width: 800px;
-    top: -15%;
+    height: 50px;
+    top: -2%;
     left: 50%;
     transform: translateX(-50%);
 }
+
 .bg-blur.white {
- background-color: #8338ec61;
+    background-color: #8338ec61;
     left: 15%;
     bottom: -10%;
 }
 
 .bg-blur.purple {
-   background-color: #9d0f9d85;
+    background-color: #9d0f9d85;
     top: 10%;
     left: 5%;
 }
@@ -525,10 +564,12 @@ summary {
 /* Contact */
 .Contact {
     position: relative;
+
     h2 {
         margin-bottom: 3rem;
         text-align: center;
     }
+
     form {
         display: flex;
         align-items: center;
@@ -537,17 +578,20 @@ summary {
         text-align: center;
     }
 }
-.contact-group{
+
+.contact-group {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    img{
+
+    img {
         width: 370px;
         height: 370px;
         opacity: .85;
     }
 }
-.formCard{
+
+.formCard {
     width: 653px;
 }
 
@@ -559,7 +603,7 @@ summary {
     color: var(--text-color);
     background-color: var(--bg-color);
     border-radius: 2rem;
-    border: 2px solid var(--main-color);
+    border: 2px solid #8338ec59;
     margin: 1.5rem 0;
     resize: none;
 }
