--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ nav {
 
 nav a:hover {
     color: var(--main-color);
+    font-weight: 300;
     padding-bottom: 1px;
     border-bottom: 2px solid var(--main-color);
 }
@@ -244,10 +245,10 @@ section {
     border: #b996e961 solid 2px;
     border-radius: 500px;
     font-size: 1.8rem;
-    background-color: #8338ec;
+    background-color: #7b37ba47;
     color: var(--text-color);
     /* color: var(--text-color); */
-    font-weight: 600;
+    font-weight: 350;
     transition: 0.3s ease-in-out;
     margin-top: 28px;
 }
@@ -319,7 +320,8 @@ section {
 
         img {
             width: 90%;
-            border-radius: 20px
+            border-radius: 20px;
+            border: solid 1px #ffffff5d;
         }
     }
 
@@ -339,16 +341,20 @@ section {
     .skills {
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 25px;
         position: sticky;
         top: 0;
         padding-top: 80px;
-
+        
         a {
-            width: 140px;
+            width: 100%;
             margin: 0%;
+            transition: ease-in-out .3s;
         }
-
+        a:hover{
+            transition: ease-in-out .3s;
+            transform: scale(1.03);
+        }
         div {
             display: flex;
             flex-direction: column;
@@ -364,7 +370,8 @@ section {
 
         img {
             width: 80%;
-            border-radius: 20px
+            border-radius: 20px;
+            border: solid 1px #ffffff5d;
         }
     }
 }
