--- a/style.css
+++ b/style.css
@@ -127,8 +127,8 @@ nav {
 
 nav a:hover {
     color: var(--main-color);
-    font-weight: 300;
     padding-bottom: 1px;
+    transition: ease-in-out 0.3s;
     border-bottom: 2px solid var(--main-color);
 }
 
@@ -218,19 +218,18 @@ section {
         font-size: 3rem;
         padding: 1rem;
         background: transparent;
-        border: 2px solid var(--main-color);
+        border: 2px solid #7b37ba;
         border-radius: 50%;
-        color: var(--main-color);
+        color: #7b37ba;
         margin: 3rem 0.5rem;
         transition: 0.3s ease-in-out;
     }
 }
 
 .social-icons a:hover {
-    color: var(--text-color);
-    background-color: var(--main-color);
-    transform: scale(1.2)translateY(-5px);
-    box-shadow: 0 0 25px var(--main-color);
+    color: #ffffffdb;
+    background-color: #7b37ba;
+    transform: scale(1.05)translateY(-5px);
 }
 
 /* Button Style */
@@ -319,7 +318,7 @@ section {
         gap: 65px;
 
         img {
-            width: 90%;
+            width: 100%;
             border-radius: 20px;
             border: solid 1px #ffffff5d;
         }
@@ -369,7 +368,7 @@ section {
         gap: 65px;
 
         img {
-            width: 80%;
+            width: 100%;
             border-radius: 20px;
             border: solid 1px #ffffff5d;
         }
@@ -638,7 +637,8 @@ footer {
 }
 
 footer ul li a:hover {
-    border-bottom: 3px solid var(--main-color);
+    padding-bottom: 4px;
+    border-bottom: 2px solid #7b37ba;
 }
 
 footer .social-icons {
